--- a/perl/5.20.1/Dockerfile
+++ b/perl/5.20.1/Dockerfile
@@ -15,22 +15,16 @@ RUN apt-get update && \
 ENV PERL_VERSION 5.20.1
 ENV PATH /opt/perl-$PERL_VERSION/bin:$PATH
 ENV CPAN_INSTALL_PATH /cpan
-ENV APPROOT /src
+ENV APPROOT /src/app
 
 # Perl
 RUN curl -sL https://raw.githubusercontent.com/tokuhirom/Perl-Build/master/perl-build > /usr/bin/perl-build
 RUN perl -pi -e 's%^#!/usr/bin/env perl%#!/usr/bin/perl%g' /usr/bin/perl-build
 RUN chmod +x /usr/bin/perl-build
 RUN perl-build $PERL_VERSION /opt/perl-$PERL_VERSION
+RUN curl -sL http://cpanmin.us/ | /opt/perl-$PERL_VERSION/bin/perl - --notest App::cpanminus Carton
 
 RUN mkdir -p $APPROOT
+ONBUILD WORKDIR $APPROOT
 
-ONBUILD COPY cpanfile $APPROOT/cpanfile
-ONBUILD COPY cpanfile.snapshot $APPROOT/cpanfile.snapshot
-
-WORKDIR $APPROOT
-RUN carton install
-
-ONBUILD COPY ./ /src/app
-
-ENTRYPOINT ["carton", "exec"]
+ENTRYPOINT ["perl"]
